--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
     <main>
         <div id="lotto-numbers-container"></div>
         <button id="generate-button">Generate Numbers</button>
+
+        <section id="contact-form-section">
+            <h2>제휴 문의 (Partnership Inquiry)</h2>
+            <form action="https://formspree.io/f/xykpveqo" method="POST">
+                <label for="name">이름 (Name):</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">이메일 (Email):</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">문의 내용 (Message):</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
+                <button type="submit">보내기 (Send)</button>
+            </form>
+        </section>
     </main>
     <script src="main.js"></script>
 </body>
