--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Impression Analyzer</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="google-adsense-account" content="ca-pub-6263853347162634">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6263853347162634"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
