--- a/index.html
+++ b/index.html
@@ -1,34 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Impression Analyzer</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-6263853347162634">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6263853347162634"
      crossorigin="anonymous"></script>
+    
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI 첫인상 분석기 - 당신의 첫인상은?</title>
+    <meta name="description" content="얼굴 사진을 업로드하고 AI가 분석하는 당신의 첫인상을 확인해보세요. 신뢰도, 매력도, 창의성 등 다양한 측면에서 당신의 이미지를 분석해드립니다.">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>첫인상 분석 (First Impression Analysis)</h1>
-        <p>정면 얼굴 사진을 업로드하여 첫인상을 분석해보세요.</p>
-    </header>
-    <main>
-        <div class="upload-container">
-            <input type="file" id="image-upload" accept="image/*">
-            <label for="image-upload" class="upload-label">사진 선택 (Choose Photo)</label>
+
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="#home" class="nav-logo">AI 첫인상 분석기</a>
+            <ul class="nav-menu">
+                <li class="nav-item"><a href="#home" class="nav-link">홈</a></li>
+                <li class="nav-item"><a href="#about" class="nav-link">소개</a></li>
+                <li class="nav-item"><a href="#privacy" class="nav-link">개인정보처리방침</a></li>
+                <li class="nav-item"><a href="#contact" class="nav-link">문의하기</a></li>
+            </ul>
         </div>
+    </nav>
+
+    <header id="home" class="page-section">
+        <div class="header-content">
+            <h1>AI가 분석하는 당신의 첫인상</h1>
+            <p class="subtitle">정면 얼굴 사진을 업로드하고, 다른 사람에게 비춰지는 당신의 모습을 확인해보세요.</p>
+        </div>
+    </header>
+
+    <main class="page-section">
+        <div class="upload-container">
+            <input type="file" id="image-upload" accept="image/*" hidden>
+            <label for="image-upload" class="upload-label">얼굴 사진 업로드하기</label>
+            <p class="disclaimer">* 업로드된 사진은 서버에 저장되지 않습니다.</p>
+        </div>
+
         <div id="analysis-result-container" class="hidden">
             <div id="image-preview-container">
                 <img id="image-preview" src="#" alt="Uploaded Face">
             </div>
             <div id="analysis-text-container">
-                <h2>분석 결과 (Analysis Result)</h2>
-                <p id="analysis-text"></p>
+                <h2>AI 첫인상 분석 결과</h2>
+                <div id="analysis-text"></div>
             </div>
         </div>
     </main>
+
+    <section id="about" class="page-section info-section">
+        <div class="section-container">
+            <h2>소개 (About)</h2>
+            <p>AI 첫인상 분석기는 사용자가 업로드한 얼굴 사진을 기반으로 첫인상을 분석해주는 재미있는 도구입니다. 최신 AI 기술을 모방하여 신뢰도, 창의성, 친근함 등 다양한 지표를 통해 다른 사람에게 비춰지는 당신의 이미지를 알려드립니다.</p>
+            <p>본 서비스는 오직 오락적인 목적으로만 사용되어야 하며, 분석 결과는 과학적인 근거가 없는 임의의 결과입니다. 저희는 사용자의 개인정보를 중요하게 생각하며, 업로드된 사진은 절대 서버에 저장하거나 수집하지 않습니다. 안심하고 이용해주세요.</p>
+        </div>
+    </section>
+
+    <section id="privacy" class="page-section info-section">
+        <div class="section-container">
+            <h2>개인정보처리방침 (Privacy Policy)</h2>
+            <p><strong>1. 수집하는 개인정보</strong><br>본 서비스는 사용자의 어떠한 개인정보도 수집, 저장, 또는 처리하지 않습니다. 사진 업로드 기능은 브라우저 내에서만 처리되며, 서버로 전송되지 않습니다.</p>
+            <p><strong>2. 쿠키 및 광고</strong><br>본 사이트는 서비스 품질 향상 및 광고 게재를 위해 Google AdSense를 사용하고 있습니다. Google AdSense는 쿠키를 사용하여 사용자의 관심사에 맞는 광고를 표시할 수 있습니다. 사용자는 브라우저 설정을 통해 쿠키 사용을 거부할 수 있습니다.</p>
+            <p><strong>3. 개인정보 보호</strong><br>저희는 사용자의 개인정보를 보호하기 위해 최선을 다하고 있습니다. 업로드된 이미지는 분석 후 즉시 파기되며, 어떠한 형태로도 저장되지 않습니다.</p>
+        </div>
+    </section>
+    
+    <section id="contact" class="page-section info-section">
+        <div class="section-container">
+            <h2>문의하기 (Contact)</h2>
+            <p>서비스에 대한 질문이나 제휴 문의는 아래 양식을 통해 보내주세요.</p>
+            <form action="https://formspree.io/f/xykpveqo" method="POST" class="contact-form">
+                <div class="form-group">
+                    <label for="name">이름:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">이메일:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">메시지:</label>
+                    <textarea id="message" name="message" rows="5" required></textarea>
+                </div>
+                <button type="submit" class="submit-btn">보내기</button>
+            </form>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>&copy; 2024 AI 첫인상 분석기. 모든 권리 보유.</p>
+        <p class="footer-disclaimer">본 사이트의 분석 결과는 오락용이며, 과학적 정확성을 보장하지 않습니다.</p>
+    </footer>
+
     <script src="main.js"></script>
 </body>
 </html>
